# tac-hep-coding-jam

./: .pre-commit-config.yaml  .readthedocs.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
Project3/: Proj3.ipynb
docs/: Aaron_Wang  AidanKhelil  AndrewToler.txt  JorgeHernandez  MattMaroun.txt  RussellM.md  RyansFile.txt  conf.py  eigen_values.md  eigen_vectors.md  environment.yml  ericle.txt  example-PR-skkwan.txt  index.md  installation.md  mattkwiecien.txt  module.md  requirements.txt
performance/: llt_perf.py  plotting.py  selfadj_perf.py  timing.py  timingGenSelfAdjEigenSolver.py
src/: LLT.cpp  generalizedSelfAdjointEigenSolver.cpp  main.cpp  real_matrices.cpp  selfAdjointEigenSolver.cpp
src/tac_hep_coding_jam/: __init__.py  _core.pyi  module.py
src/tac_hep_coding_jam/_compat/: __init__.py  typing.py
tests/: test_compiled.py  test_package.py
